--- a/lab2-c221/lab2-c221.vcxproj.filters
+++ b/lab2-c221/lab2-c221.vcxproj.filters
@@ -21,12 +21,18 @@
     <ClCompile Include="book.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="library.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Point.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
     <ClInclude Include="book.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+    <ClInclude Include="library.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
   </ItemGroup>
