--- a/lab2-c221/lab2-c221.vcxproj.filters
+++ b/lab2-c221/lab2-c221.vcxproj.filters
@@ -35,5 +35,8 @@
     <ClInclude Include="library.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
+    <ClInclude Include="tuple_print.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
