лаба 2 сделана помимо пару вопросов по калькулятору остаток и максимум

--- a/lab2-c221/lab2-c221.vcxproj.filters
+++ b/lab2-c221/lab2-c221.vcxproj.filters
@@ -41,5 +41,8 @@
     <ClInclude Include="calc_functions.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
+    <ClInclude Include="my_range.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
