--- a/lab2-c221/lab2-c221.vcxproj
+++ b/lab2-c221/lab2-c221.vcxproj
@@ -136,6 +136,7 @@
     <ClInclude Include="book.h" />
     <ClInclude Include="calc_functions.h" />
     <ClInclude Include="library.h" />
+    <ClInclude Include="my_range.h" />
     <ClInclude Include="Point.h" />
     <ClInclude Include="tuple_print.h" />
   </ItemGroup>
