--- a/lab3-c221/lab3-c221.vcxproj
+++ b/lab3-c221/lab3-c221.vcxproj
@@ -135,6 +135,7 @@
   <ItemGroup>
     <ClInclude Include="Rect.h" />
     <ClInclude Include="Shape.h" />
+    <ClInclude Include="str_derived_vector.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
