--- a/lab3-c221/lab3-c221.vcxproj.filters
+++ b/lab3-c221/lab3-c221.vcxproj.filters
@@ -35,5 +35,8 @@
     <ClInclude Include="str_derived_vector.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
+    <ClInclude Include="my_optional.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
