--- a/lab3-c221/lab3-c221.vcxproj.filters
+++ b/lab3-c221/lab3-c221.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClCompile Include="Rect.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="person.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Shape.h">
@@ -36,6 +39,9 @@
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
     <ClInclude Include="my_optional.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+    <ClInclude Include="person.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
   </ItemGroup>
