--- a/lab3-c221/lab3-c221.vcxproj
+++ b/lab3-c221/lab3-c221.vcxproj
@@ -129,11 +129,13 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="lab3-c221.cpp" />
+    <ClCompile Include="person.cpp" />
     <ClCompile Include="Rect.cpp" />
     <ClCompile Include="Shape.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="my_optional.h" />
+    <ClInclude Include="person.h" />
     <ClInclude Include="Rect.h" />
     <ClInclude Include="Shape.h" />
     <ClInclude Include="str_derived_vector.h" />
