--- a/lab3-c221/lab3-c221.vcxproj
+++ b/lab3-c221/lab3-c221.vcxproj
@@ -128,12 +128,16 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="cat.cpp" />
+    <ClCompile Include="dog.cpp" />
     <ClCompile Include="lab3-c221.cpp" />
     <ClCompile Include="person.cpp" />
     <ClCompile Include="Rect.cpp" />
     <ClCompile Include="Shape.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="cat.h" />
+    <ClInclude Include="dog.h" />
     <ClInclude Include="my_optional.h" />
     <ClInclude Include="person.h" />
     <ClInclude Include="Rect.h" />
