--- a/lab3-c221/lab3-c221.vcxproj
+++ b/lab3-c221/lab3-c221.vcxproj
@@ -138,6 +138,7 @@
   <ItemGroup>
     <ClInclude Include="cat.h" />
     <ClInclude Include="dog.h" />
+    <ClInclude Include="my_array.h" />
     <ClInclude Include="my_optional.h" />
     <ClInclude Include="my_time.h" />
     <ClInclude Include="person.h" />
