--- a/lab3-c221/lab3-c221.vcxproj.filters
+++ b/lab3-c221/lab3-c221.vcxproj.filters
@@ -59,5 +59,8 @@
     <ClInclude Include="my_time.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
+    <ClInclude Include="my_array.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
