--- a/lab4-c221/lab4-c221.vcxproj.filters
+++ b/lab4-c221/lab4-c221.vcxproj.filters
@@ -21,9 +21,18 @@
     <ClCompile Include="ColoredCircle.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="ColoredRect.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="ColoredCircle.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+    <ClInclude Include="ColoredRect.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+    <ClInclude Include="Color.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
   </ItemGroup>
